# openbid-intel

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  bid-intel.cmd  bid-intel.ps1  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  source_request.yml
.github/workflows/: pages.yml  tests.yml
config/: profile.json  sources.example.json  sources.json
docs/: DATA_HANDLING.md  DATA_SOURCES.md  END_TO_END_CASE_STUDY.md  OPERATIONS.md  PROFILE_PACKS.md  RELEASE_CHECKLIST.md  USER_VALIDATION.md
samples/: competitive_demo.json  demo_notices.json  field_mapping.example.json  profile.overlay.example.json  sources.rss.example.json  verified_historical.json
schemas/: profile.schema.json  sources.schema.json
scripts/: daily.ps1  install_task.ps1  install_weekly_task.ps1  uninstall_task.ps1  uninstall_weekly_task.ps1  weekly_intelligence.ps1
src/bid_intel/: __init__.py  calibration.py  cli.py  collectors.py  competitive.py  config_validation.py  connectors.py  dashboard.py  doctor.py  explain.py  exports.py  feed_connector.py  htmlutil.py  importers.py  matcher.py  models.py  normalize.py  notifier.py  (+6 more)
tests/: test_calibration.py  test_cli.py  test_collectors.py  test_competitive.py  test_config_validation.py  test_dashboard.py  test_exports.py  test_feed_connector.py  test_importers.py  test_matcher.py  test_notifier.py  test_profile_overlays.py  test_profiles.py  test_routing.py  test_storage.py
(+12 files in other folders)
